--- a/todo/reproductor.html
+++ b/todo/reproductor.html
@@ -22,7 +22,7 @@
                      "Si al final esta vida es un sueño<br>
                      Sólo sé que a tu lado me quiero despertar"<br><b>1:21</b>
                     </p>
-                    <div id="audio-player">
+                    <div class="audio-player">
                         <audio controls>
                             <source src="musica/canciones/Quiero morirme en ti.mp3">
                         </audio>
