--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
         <link rel="stylesheet"  type="text/css"   href="login.css">
     </head>
     <body>
+        <audio autoplay>
+            <source src="todo/inicio.mp3">
+        </audio>
         <div class="login-container">
             <h1>Iniciar sesión</h1>
             <input type="text" id="username" placeholder="Usuario">
