--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet"  type="text/css"   href="login.css">
     </head>
     <body>
-        <audio autoplay>
+        <audio autoplay controls>
             <source src='todo/inicio.mp3'>
         </audio>
         <div class="login-container">
