--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <link rel="stylesheet"  type="text/css"   href="login.css">
     </head>
     <body>
-        <audio autoplay>
-            <source src='todo/inicio.mp3'>
+        <audio autoplay loop>
+            <source src="todo/inicio.mp3" type="mp3">
         </audio>
         <div class="login-container">
             <h1>Iniciar sesión</h1>
