--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet"  type="text/html"  href="todo/principal.html">
         <link rel="stylesheet"  type="text/css"   href="login.css">
     </head>
-    <body>
+    <body onclick="PlayAudio()" >
         <div class="login-container">
             <h1>Iniciar sesión</h1>
             <input type="text" id="username" placeholder="Usuario">
@@ -19,7 +19,7 @@
        <div id="frase">
         <h2>"Somos Tu y Yo Para Siempre"</h2>
        </div>
-        <audio id="music" autoplay loop  >
+        <audio id="music" loop  >
         <source src="todo/musica/inicio.mp3" type="audio/mp3">
       </audio>
       <script>
