--- a/todo/reproductor.html
+++ b/todo/reproductor.html
@@ -9,9 +9,10 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     </head>
     <body>
-        
         <a href="musica.html">
-            <button type="button">c</button>
+            <button type="button"> 
+                <img src="musica/back2.jpg">
+            </button>
         </a>
         <div id="cajeta">
             <div id="box">
