--- a/todo/carta.html
+++ b/todo/carta.html
@@ -5,7 +5,7 @@
         <meta cherset="robots"  content="noindex">
         <link rel="icon"        href="imagens/Nueva carpeta/icono.ico.webp"> 
         <link rel="stylesheet"  type="text/css"   href="normalize.css">
-        <link rel="stylesheet"  type="text/css"   href="carta/estilos4.css">
+        <link rel="stylesheet"  type="text/css"   href="estilos4.css">
         <link rel="stylesheet"  type="text/html"  href="principal.html">
         <link rel="stylesheet"  type="text/html"  href="musica.html">
         <link rel="stylesheet"  type="text/html"  href="porq.html">
@@ -13,40 +13,82 @@
         <title>Te Amooo</title>
     </head>
     <body>
+        <div class="principal">
+            <div id="titulo">
+                <h1>Feliz cumpleaños mi niña hermosas</h1>
+            </div>
+            <audio autoplay>
+              <source src="carta/Hariseno - Water of Life.mp3">
+            </audio>
+        </div>
+
         <div id= "bar">
             <li class="barra"><a href="principal.html">Inicio</a></li>
             <li class="barra"><a href="musica.html">Musicas</a></li>
             <li class="barra"><a href="porq.html">por que?</a></li>
             <li class="barra"><a href="">aun nose</a></li>
         </div>
-        <div id="carta">
-            <p>Bueno amor, debo empezar contandote de lo increible que fue crear esta pagina Web.<br>
-              La idea de crear esta carta surgió en nuestro segundo mes de relación(11-julio-2023)<br>
-              ese día te dí una carta echa en Canva jasjaja, la idea me surgió mientras la hacía.<br>
-              Pensé que debía hacerte algo muy especial, algo que yo como amante de la tecnología<br>
-              pudiera hacerte, en ese momento recorde que yo estab aprendiendo algo de desarrollo web,<br>
-              aun que no soy profecional en esa aréa, solo sabía lo básico, con ezfuerzo, tiempo y<br>
-              dedicación podía hacer algo decente.<br>
-              No soy muy creativo pero hice mi mejor esfuerzo. <br><br>
-              Espero te haya gustado este pequeño sitio web, solo sera uno de muchos regalos que te quiero<br>
-              hacer, no se en que momento vayas a leer esta pequeña carta pero te quiero recordar lo muchooo <br> 
-              que Te Amo...<br><br>
-              Para poder llegar a este resultado he estudiado bastante la creacion de paginas web, puede que veas<br>
-              todo lindo y sencillo pero poner cada cosa en su lugar a sido un trabajo bien extenso, cada color, <br>
-              imagen, audio y cada cosita que ves ha sido mi creatividad ajsjjas.<br>
-              Esta cool la pagina de Inicio de Sesion, verdad? ajsjajs... me encantó, recuerdo que es lo unico que <br>
-              te spoilie, desde ese momento en enero que lo viste, ya el sitio web iba en un 50%. Si te preguntas <br>
-              ¿Por que he tardado tanto? pues desde julio que empecé la creación me ha llevado tiempo la parte de la <br>
-              creatividad, dudaba mucho de lo que estaba haciendo, pensaba si te iba a gustar o no, pensaba si los <br>
-              colores te iban a gustar o si la decoración estaba linda y así pensaba mucho jajsasj... <br>
-              Tambien habia semanas en las que estaba ocupado y no podía avanzar mucho o peleabamos por algo y no me <br>
-              daba animos, recuerdo que en diciembre me atracé bastante pues en todo ese mes no hice nada para la <br>
-              pagina por que tenia examenes, la orquesta y las fiestas; ya en enero comencé de nuevo.<br><br>
-              Por cierto amor, esta carta esta echa en diferentes días, iba escribiendo algo a medida que iba <br>
-              construyendo el sitio web, asi q sorry si hay parrafos donde cambio de tema de repente jajsja Te amitoo<br><br>
-            </p>
-
+        <div id="cont">
+            <div class="carta-antigua">
+                <p>Bueno amor, debo empezar contandote de lo increible que fue crear esta pagina Web.
+                  La idea de crear esta carta surgió en nuestro segundo mes de relación(11-julio-2023)
+                  ese día te dí una carta echa en Canva jasjaja, la idea me surgió mientras la hacía.
+                  Pensé que debía hacerte algo muy especial, algo que yo como amante de la tecnología
+                  pudiera hacerte, en ese momento recorde que yo estab aprendiendo algo de desarrollo web,
+                  aun que no soy profecional en esa aréa, solo sabía lo básico, con ezfuerzo, tiempo y
+                  dedicación podía hacer algo decente.
+                  No soy muy creativo pero hice mi mejor esfuerzo. <br><br>
+                  Espero te haya gustado este pequeño sitio web, solo sera uno de muchos regalos que te quiero
+                  hacer, no se en que momento vayas a leer esta pequeña carta pero te quiero recordar lo muchooo 
+                  que Te Amo...<br><br>
+                  Para poder llegar a este resultado he estudiado bastante la creacion de paginas web, puede que veas
+                  todo lindo y sencillo pero poner cada cosa en su lugar a sido un trabajo bien extenso, cada color, 
+                  imagen, audio y cada cosita que ves ha sido mi creatividad ajsjjas.
+                  Esta cool la pagina de Inicio de Sesion, verdad? ajsjajs... me encantó, recuerdo que es lo unico que 
+                  te spoilie, desde ese momento en enero que lo viste, ya el sitio web iba en un 50%. Si te preguntas 
+                  ¿Por que he tardado tanto? pues desde julio que empecé la creación me ha llevado tiempo la parte de la 
+                  creatividad, dudaba mucho de lo que estaba haciendo, pensaba si te iba a gustar o no, pensaba si los 
+                  colores te iban a gustar o si la decoración estaba linda y así pensaba mucho jajsasj... 
+                  Tambien habia semanas en las que estaba ocupado y no podía avanzar mucho o peleabamos por algo y no me 
+                  daba animos, recuerdo que en diciembre me atracé bastante pues en todo ese mes no hice nada para la 
+                  pagina por que tenia examenes, la orquesta y las fiestas; ya en enero comencé de nuevo.<br><br>
+                  Por cierto amor, esta carta esta echa en diferentes días, iba escribiendo algo a medida que iba 
+                  construyendo el sitio web, asi q sorry si hay parrafos donde cambio de tema de repente jajsja Te amitoo<br><br>
+                  Bueno amor hoy es 13 de abril ya casi es tu cumple y estamos peleando, perdón cuando leas esto. Quiero que sepas 
+                  que te amo un mundo, te amo demasiado, se que peleamos mucho pero a pesar de todo te amo demasiasdo.
+                  ahorita mientras escribo esto estas mimida, triste y enojada conmigo, lo siento.
+                  No se si vas a leer toda esta carta y todo lo que he escrito en las otras paguinas, pero si estas leyendo esto 
+                  quiero q sepas q lo siento mucho si no soy el novio q esperabas, lo he dicho muchas veces, pero siento que esperabas algo 
+                  mejor que yo, perdoname mi niña. si en algun momento te cansas de mi se que sera por mi culpa.
+                  No se que pensaras de mi en este momento que estas leyendo esta carta, si estas pensando en dejarme
+                  o si en tu corazón ya se está perdiendo mi amor, no se, pero se que tal vez te estas planteando en dejarme o algo,
+                  o quien sabe, tal vez hasta ya me hayas dejado para el momento en q estas leyendo esto.<br><br>
+                  Sabes, ojala estas palabra pudieran sanar las heridas que te he causado a lo largo de nuestro primer año,
+                  se que te he echo sufrir con mis errores y hasta talvez estas leyendo esto enojada conmigo, quisera poder 
+                  sanar todos esos malos momentos que te he echo pasar, se q no soy un buen novio, gracias mi niña linda, de verdad
+                  muchas gracias mi bb por seguir amando asi como lo haces apesar de todas las cosas malas que te echo pasar.
+                  Lloro, en realidad estoy escribiendo esto casi llorando la recoradar todo el amor q me das y yo simplente te hago sufrir,
+                  perdon mi niña de verdad se que no te mereces esos malos tratos que te doy aveces, PERDON MI NIÑA HERMOSA.<br><br>
+                  Mi niña te amo, te amo un mundo, no se si para ti estas palabras no sean tan grandes pero te amooo y te amoooooo como no tienes idea,
+                  eres mi bb mi niña consentida, eres mi princesa bella, mi reina hermosa, mi bb mimada, eres mi todo. si lees esto dile a mi yo del futoro, q para 
+                  el momento q leas esto sera mi yo del presente, Dile q lo amas mucho y q nunca lo vas a abandonar, dile eres mi tesoro mi One Piece.
+                  Ojala hayas llegado a esta parte de la carta, si lees esto, quiero q sepas q nunca me voy a rendir, 
+                  peleare por ti, por tu amor, hasta donde Diosito nos los permita y si llega el momento donde donde decidas dejarme, lo aceptaré.
+                  Tengo muchas metas por lograr pero para eso te necesito a mi lado, eres mi fuerza, mi vida, mi todo.
+                  de verdad te necesito a mi lado para todas las cosas que estan por venir en mi vida, nuestra vida, y no quiero 
+                  q estes a mi lado como mi novia, quiero que estes como mi ESPOSA MI MUJER, espero llegar a ese momento.<br><br>
+                  Bueno mi niña, ya iré acabando esta parte. Quiero q sepas q todo estará bien, se que pasas por muchas cosas, 
+                  realmente eres una niña muy fuerte, todo lo que tienes q aguantar dia a dia en tu casa, en la escuela y en tu alrededor, 
+                  se q no es facil eso pero mirate aun apesar de todas las cosas q has pasado hoy cumples tus 18 años, hoy te haces mayor, 
+                  te haces mas fuerte, mi niña grande ñaaaa. Sigue adelante mi bb, juntos llegaremos muy lejos o si por motivos de 
+                  la vida no estamos juntos, seguire apoyandote desde donde estes, pase lo q pase te seguiré amando, se q talvez no lo ves asi por todas las peleas 
+                  q estamos llevando, perdon, pero quiero q sepas q yo siempre estare para apoyarte mi niña linda.<br><br>
+                  Se q es mucho texto la carta pero espero hayas llegado hasta aquí, TE AMO mi reina
+                </p>
+            </div>
         </div>
+
+       
 
 
     </body>
