--- a/todo/principal.html
+++ b/todo/principal.html
@@ -34,7 +34,7 @@
       <div class="imagenes" >
         <div id="arch1" class="contenedores">
           <div class="fond">
-            <video autoplay loop muted >
+            <video autoplay loop muted controls >
               <source src="imagens/img1.mp4" type="video/mp4">
             </video> 
           </div> 
