--- a/todo/principal.html
+++ b/todo/principal.html
@@ -42,7 +42,7 @@
         </div>
         <div id="arch2" class="contenedores">
           <div class="fond">
-            <video  autoplay loop muted >
+            <video  autoplay loop muted controls >
               <source src="imagens/img2.mp4" type="video/mp4">
             </video>
           </div>
