--- a/todo/principal.html
+++ b/todo/principal.html
@@ -34,7 +34,7 @@
       <div class="imagenes" >
         <div id="arch1" class="contenedores">
           <div class="fond">
-            <video autoplay loop muted controls >
+            <video autoplay loop muted >
               <source src="imagens/img1.mp4" type="video/mp4">
             </video> 
           </div> 
@@ -42,7 +42,7 @@
         </div>
         <div id="arch2" class="contenedores">
           <div class="fond">
-            <video  autoplay loop muted controls >
+            <video  autoplay loop muted >
               <source src="imagens/img2.mp4" type="video/mp4">
             </video>
           </div>
