--- a/todo/principal.html
+++ b/todo/principal.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet"  type="text/html"  href="musica.html">
         <link rel="stylesheet"  type="text/html"  href="carta.html">
         <link rel="stylesheet"  type="text/css"   href="color.js">
-        <link rel="stylesheet"  type="text/html"  href="">
+        <link rel="stylesheet"  type="text/html"  href="feliz.html">
         <title>Te Amooo</title>
     </head>
     <body> 
@@ -27,7 +27,7 @@
           <li class="barra"><a href="porq.html">¿Por qué?</a></li>
           <li class="barra"><a href="musica.html">Musicas</a></li>
           <li class="barra"><a href="carta.html">Carta</a></li>
-          <li class="barra"><a href="">aun nose</a></li>
+          <li class="barra"><a href="feliz.html">Happy</a></li>
         </ul>   
       </div>
       <script src="color.js"></script> 
