--- a/todo/carta.html
+++ b/todo/carta.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet"  type="text/html"  href="principal.html">
         <link rel="stylesheet"  type="text/html"  href="musica.html">
         <link rel="stylesheet"  type="text/html"  href="porq.html">
-        <link rel="stylesheet"  type="text/html"  href="">
+        <link rel="stylesheet"  type="text/html"  href="feliz.html">
         <title>Te Amooo</title>
     </head>
     <body>
@@ -26,7 +26,7 @@
             <li class="barra"><a href="principal.html">Inicio</a></li>
             <li class="barra"><a href="musica.html">Musicas</a></li>
             <li class="barra"><a href="porq.html">por que?</a></li>
-            <li class="barra"><a href="">aun nose</a></li>
+            <li class="barra"><a href="feliz.html">Happy</a></li>
         </div>
         <div id="cont">
             <div class="carta-antigua">
