--- a/todo/porq.html
+++ b/todo/porq.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet"  type="text/html"  href="principal.html">
         <link rel="stylesheet"  type="text/html"  href="musica.html">
         <link rel="stylesheet"  type="text/html"  href="carta.html">
-        <link rel="stylesheet"  type="text/html"  href="">
+        <link rel="stylesheet"  type="text/html"  href="feliz.html">
         <link rel="stylesheet"  type="text/css"   href="por que/barra2.js">
         <title>Te Amooo</title>
     </head>
@@ -25,7 +25,7 @@
               <li class="barra"><a href="principal.html">Inicio</a></li>
               <li class="barra"><a href="musica.html">Musicas</a></li>
               <li class="barra"><a href="carta.html">Carta</a></li>
-              <li class="barra"><a href="">aun nose</a></li>
+              <li class="barra"><a href="feliz.html">Happy</a></li>
             </ul>   
         </div>
         <script src="por que/barra2.js"></script> 
